--- a/app/src/main/res/layout/components.xml
+++ b/app/src/main/res/layout/components.xml
@@ -34,7 +34,7 @@
                 android:singleLine="true"
                 android:maxLength="10"
                 android:ellipsize="end"
-                android:text="移动端架构师体系课"
+                android:text="哈密瓜"
                 android:textSize="18dp"
                 android:textStyle="bold"
                 android:textColor="#000000"/>
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:singleLine="true"
                 android:ellipsize="end"
-                android:text="移动开发“两极分化”，没有差不多的“中间层”，唯有尽早成长为架构师，你的职业道路才能走的更远更稳"
+                android:text="葡萄"
                 android:textSize="14dp"
                 android:layout_marginTop="6dp"
                 android:textStyle="normal"
