--- a/app/src/main/res/layout/lab.xml
+++ b/app/src/main/res/layout/lab.xml
@@ -34,7 +34,7 @@
                 android:singleLine="true"
                 android:maxLength="10"
                 android:ellipsize="end"
-                android:text="移动端架构师体系课"
+                android:text="雪碧"
                 android:textSize="18dp"
                 android:textStyle="bold"
                 android:textColor="#000000"/>
