--- a/app/src/main/res/layout/components.xml
+++ b/app/src/main/res/layout/components.xml
@@ -2,10 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:paddingRight="10dp"
     android:background="#0A000000"
-    android:layout_margin="10dp"
-    android:paddingLeft="10dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -30,10 +27,10 @@
             <TextView
                 android:id="@+id/item_title"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:singleLine="true"
+                android:layout_height="30dp"
+                android:gravity="center"
                 android:text="哈密瓜"
-                android:textSize="14dp"
+                android:textSize="10dp"
                 android:textColor="#000000"/>
 
 
