--- a/app/src/main/res/layout/lab.xml
+++ b/app/src/main/res/layout/lab.xml
@@ -17,7 +17,7 @@
             android:id="@+id/item_image"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@drawable/bgs"
+            android:src="@drawable/ic_canyin"
             android:layout_gravity="center"/>
 
         <LinearLayout
