--- a/app/src/main/res/layout/waterfall.xml
+++ b/app/src/main/res/layout/waterfall.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:id="@+id/item_image"
             android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:src="@drawable/bgs"
             android:layout_gravity="center"/>
 
@@ -30,6 +30,12 @@
                 android:layout_height="30dp"
                 android:gravity="center"
                 android:text="哈密瓜"
+                android:singleLine="true"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:clickable="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:textSize="10dp"
                 android:textColor="#000000"/>
 
