--- a/app/src/main/res/layout/waterfall.xml
+++ b/app/src/main/res/layout/waterfall.xml
@@ -8,6 +8,6 @@
         android:id="@+id/item_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/bgs" />
+        android:src="@drawable/jetpack" />
 
 </LinearLayout>
