--- a/app/src/main/res/layout/fourth.xml
+++ b/app/src/main/res/layout/fourth.xml
@@ -1,42 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_marginRight="15dp"
-    android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_marginRight="6dp"
     android:layout_marginBottom="10dp"
-    android:background="@drawable/shape_rectangle6"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/shape_rectangle19"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_gravity="center"
-        >
 
-        <ImageView
-            android:id="@+id/iv_image"
-            android:layout_width="158dp"
-            android:layout_height="158dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/falls1"/>
+    <ImageView
+        android:id="@+id/iv_image"
+        android:layout_width="158dp"
+        android:layout_height="158dp"
+        android:src="@drawable/falls1"
+        android:scaleType="fitXY"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+    <TextView
             android:id="@+id/name"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:text="电信关爱版-为老年人架桥"
             android:textColor="#333333"
             android:textSize="14sp"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintTop_toBottomOf="@id/iv_image"
+            app:layout_constraintLeft_toLeftOf="parent"
             />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="left"
-            android:gravity="left">
 
             <TextView
                 android:id="@+id/name2"
@@ -49,6 +41,8 @@
                 android:layout_marginLeft="10dp"
                 android:textColor="#ea5858"
                 android:textSize="11sp"
+                app:layout_constraintTop_toBottomOf="@id/name"
+                app:layout_constraintLeft_toLeftOf="parent"
                 />
 
             <TextView
@@ -60,14 +54,11 @@
                 android:gravity="center"
                 android:textColor="#ea5858"
                 android:textSize="11sp"
+                android:layout_marginLeft="3dp"
+                app:layout_constraintTop_toBottomOf="@id/name"
+                app:layout_constraintLeft_toRightOf="@id/name2"
                 />
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/name4"
@@ -77,6 +68,8 @@
                 android:layout_marginLeft="10dp"
                 android:text="￥"
                 android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@id/name2"
+                app:layout_constraintLeft_toLeftOf="parent"
                 />
 
             <TextView
@@ -86,6 +79,8 @@
                 android:textColor="#ea5858"
                 android:text="10"
                 android:textSize="18sp"
+                app:layout_constraintTop_toBottomOf="@id/name2"
+                app:layout_constraintLeft_toRightOf="@id/name4"
                 />
 
             <TextView
@@ -95,9 +90,8 @@
                 android:textColor="#ea5858"
                 android:text="/月"
                 android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@id/name2"
+                app:layout_constraintLeft_toRightOf="@id/name5"
                 />
-        </LinearLayout>
 
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
