--- a/app/src/main/res/layout/recharge_page.xml
+++ b/app/src/main/res/layout/recharge_page.xml
@@ -8,6 +8,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#f4f4f4">
 
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!-- 在这里添加你的约束布局内容 -->
+
+
     <ImageView
         android:layout_width="11dp"
         android:layout_height="19dp"
@@ -95,6 +107,7 @@
         android:gravity="center"
         android:layout_marginTop="14dp"
         android:textColor="#fe5561"
+        android:layout_marginRight="6dp"
         android:background="@drawable/shape_rectangle17"
         app:layout_constraintTop_toBottomOf="@id/tv_tv3"
         app:layout_constraintRight_toLeftOf="@id/tv_tv6"
@@ -143,7 +156,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl1"
-        android:layout_width="334dp"
+        android:layout_width="match_parent"
         android:layout_height="38dp"
         android:layout_marginTop="15dp"
         android:gravity="center"
@@ -205,12 +218,12 @@
         <TextView
             android:layout_width="52dp"
             android:layout_height="22dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="8dp"
             android:text="兑好物"
             android:textColor="#ffffff"
-            android:layout_marginTop="15dp"
             android:textSize="11sp"
-            app:layout_constraintBottom_toBottomOf="@id/im1_im"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/tv2_tv4"
             android:background="@drawable/shape_rectangle4"
             android:gravity="center"
@@ -229,7 +242,7 @@
     
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl2"
-        android:layout_width="334dp"
+        android:layout_width="match_parent"
         android:layout_height="147dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/shape_rectangle5"
@@ -286,7 +299,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl3"
-        android:layout_width="334dp"
+        android:layout_width="match_parent"
         android:layout_height="269dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/shape_rectangle5"
@@ -462,6 +475,7 @@
             android:textSize="13sp" />
 
         <TextView
+            android:id="@+id/tv2"
             android:layout_width="310dp"
             android:layout_height="1dp"
             android:layout_marginTop="140dp"
@@ -470,9 +484,163 @@
             app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/shape_rectangle10"/>
 
+        <TextView
+            android:id="@+id/cl3_tv7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="推荐兑换好物："
+            android:textColor="#333333"
+            android:textSize="14sp"
+            android:gravity="left"
+            android:layout_marginLeft="13dp"
+            android:layout_marginTop="156dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/cl3_tv8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="共有"
+            android:paddingLeft="13dp"
+            android:textColor="#999999"
+            android:textSize="13sp"
+            app:layout_constraintLeft_toRightOf="@id/cl3_tv7"
+            app:layout_constraintBaseline_toBaselineOf="@id/cl3_tv7"
+            />
+
+        <ImageView
+            android:id="@+id/cl3_tv9"
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:layout_marginBottom="2dp"
+            android:src="@drawable/bean"
+            app:layout_constraintLeft_toRightOf="@id/cl3_tv8"
+            app:layout_constraintBottom_toBottomOf="@id/cl3_tv7"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5金豆"
+            android:textColor="#f3bb62"
+            android:textSize="12sp"
+            app:layout_constraintLeft_toRightOf="@id/cl3_tv9"
+            app:layout_constraintBottom_toBottomOf="@id/cl3_tv7"
+            />
+
+        <ImageView
+            android:id="@+id/cl3_im2"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:layout_marginLeft="55dp"
+            app:layout_constraintLeft_toRightOf="@id/cl3_tv8"
+            app:layout_constraintBottom_toBottomOf="@id/cl3_tv7"
+            android:src="@drawable/refresh" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="21dp"
+            android:text="换一换"
+            android:textColor="#999999"
+            android:layout_marginLeft="2dp"
+            app:layout_constraintLeft_toRightOf="@id/cl3_im2"
+            app:layout_constraintBaseline_toBaselineOf="@id/cl3_tv7"
+            android:textSize="12sp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view2"
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@id/cl3_tv7"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl4"
+        android:layout_width="match_parent"
+        android:layout_height="151dp"
+        android:layout_marginTop="13dp"
+        android:background="@drawable/shape_rectangle5"
+        app:layout_constraintTop_toBottomOf="@id/cl3"
+        app:layout_constraintLeft_toLeftOf="parent"
+        >
+
+        <TextView
+            android:id="@+id/cl4_tv7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="赠送翻牌机会 1 次"
+            android:textColor="#333333"
+            android:textSize="14sp"
+            android:gravity="left"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="13dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/cl4_tv8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="累计剩余3次"
+            android:paddingLeft="13dp"
+            android:textColor="#999999"
+            android:textSize="13sp"
+            app:layout_constraintLeft_toRightOf="@id/cl4_tv7"
+            app:layout_constraintBaseline_toBaselineOf="@id/cl4_tv7"
+            />
+
+        <TextView
+            android:id="@+id/cl4_tv9"
+            android:layout_width="wrap_content"
+            android:layout_height="21dp"
+            android:text="逛更多"
+            android:textColor="#999999"
+            android:layout_marginLeft="63dp"
+            app:layout_constraintLeft_toRightOf="@id/cl4_tv8"
+            app:layout_constraintBaseline_toBaselineOf="@id/cl4_tv7"
+            android:textSize="12sp" />
+
+        <ImageView
+            android:id="@+id/cl4_im2"
+            android:layout_width="5dp"
+            android:layout_height="9dp"
+            android:layout_marginLeft="4dp"
+            android:src="@drawable/arrow"
+            android:textColor="#999999"
+            android:layout_marginBottom="5dp"
+            app:layout_constraintLeft_toRightOf="@id/cl4_tv9"
+            app:layout_constraintBottom_toBottomOf="@id/cl4_tv7"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view3"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="15dp"
+                app:layout_constraintTop_toBottomOf="@id/cl4"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
