--- a/app/src/main/res/layout/lab.xml
+++ b/app/src/main/res/layout/lab.xml
@@ -1,45 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:paddingRight="10dp"
-    android:background="#0A000000"
-    android:layout_margin="10dp"
-    android:paddingLeft="10dp"
+    android:background="@drawable/shape_rectangle13"
+    android:layout_marginLeft="10dp"
+    android:layout_marginTop="10dp"
+    android:gravity="center"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="80dp"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
 
-        <ImageView
+
+    <ImageView
             android:id="@+id/item_image"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/ic_canyin"
             android:layout_gravity="center"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/item_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:maxLength="10"
-                android:ellipsize="end"
-                android:text="雪碧"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="#000000"/>
+    <TextView
+        android:id="@+id/item_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:maxLength="10"
+        android:ellipsize="end"
 
-        </LinearLayout>
+        android:text="雪碧"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="#000000"/>
 
-    </LinearLayout>
 
 </LinearLayout>
