--- a/app/src/main/res/layout/lab.xml
+++ b/app/src/main/res/layout/lab.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="200dp"
     android:background="@drawable/shape_rectangle13"
     android:layout_marginLeft="10dp"
     android:layout_marginTop="10dp"
     android:gravity="center"
-    android:layout_height="wrap_content">
+    android:layout_height="100dp">
 
 
 
