--- a/app/src/main/res/layout/activity_fourth.xml
+++ b/app/src/main/res/layout/activity_fourth.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     >
 
-    <TextView
+    <Button
+        android:id="@+id/btn_rotate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Fourth"
-        android:layout_gravity="center"
+        android:layout_margin="10dp"
         android:gravity="center"
-        android:textSize="24sp"
-        android:background="@color/design_default_color_secondary_variant"/>
+        android:onClick="rotate"
+        android:text="旋转动画"
+        android:textSize="20sp" />
+
+    <ImageView
+
+        android:layout_gravity="center"
+        android:id="@+id/imgview"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/bean" />
 
 </LinearLayout>
