--- a/app/src/main/res/layout/fourth.xml
+++ b/app/src/main/res/layout/fourth.xml
@@ -24,6 +24,7 @@
             android:text="电信关爱版-为老年人架桥"
             android:textColor="#333333"
             android:textSize="14sp"
+            android:textStyle="bold"
             android:layout_marginLeft="10dp"
             app:layout_constraintTop_toBottomOf="@id/iv_image"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -68,6 +69,7 @@
                 android:layout_marginLeft="10dp"
                 android:text="￥"
                 android:textSize="12sp"
+                app:layout_constraintBaseline_toBaselineOf="@id/name5"
                 app:layout_constraintTop_toBottomOf="@id/name2"
                 app:layout_constraintLeft_toLeftOf="parent"
                 />
@@ -90,6 +92,7 @@
                 android:textColor="#ea5858"
                 android:text="/月"
                 android:textSize="12sp"
+                app:layout_constraintBaseline_toBaselineOf="@id/name5"
                 app:layout_constraintTop_toBottomOf="@id/name2"
                 app:layout_constraintLeft_toRightOf="@id/name5"
                 />
