--- a/app/src/main/res/layout/fragment_lab.xml
+++ b/app/src/main/res/layout/fragment_lab.xml
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.example.myapplication.CustomRecyclerView
+    <com.example.myapplication.RecyclerViewAtViewPager2
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
