--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <declare-styleable name="TitleBar">
+        <attr name="title" format="string" />
+        <attr name="back_src" format="reference" />
+        <attr name="imageWidth3" format="dimension"/>
+        <attr name="imageHeight3" format="dimension"/>
+    </declare-styleable>
+
     <declare-styleable name="ImageTextCustomView">
     <attr name="imageWidth" format="dimension"/>
     <attr name="imageWidth2" format="dimension"/>
@@ -14,4 +21,6 @@
     <attr name="textContent" format="string"/>
     <attr name="imageAndTextMargin" format="dimension"/>
     </declare-styleable>
+
+
 </resources>
