--- a/app/src/main/res/layout/image_text_view_layout.xml
+++ b/app/src/main/res/layout/image_text_view_layout.xml
@@ -15,6 +15,7 @@
             android:id="@+id/top_image"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_centerVertical="true"
             android:src="@drawable/upload"
             />
 
@@ -34,6 +35,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginRight="10dp"
+        android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:src="@drawable/upload"
         />
