--- a/app/src/main/res/layout/image_text_view_layout.xml
+++ b/app/src/main/res/layout/image_text_view_layout.xml
@@ -8,13 +8,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_centerHorizontal="true"
         android:gravity="center"
         >
         <ImageView
             android:id="@+id/top_image"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="16dp"
+            android:layout_height="17dp"
             android:layout_centerVertical="true"
             android:src="@drawable/upload"
             />
@@ -32,10 +32,11 @@
 
     <ImageView
         android:id="@+id/top_image2"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginRight="10dp"
+        android:layout_width="16dp"
+        android:layout_height="14dp"
         android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
+
         android:layout_alignParentRight="true"
         android:src="@drawable/upload"
         />
