--- a/app/src/main/res/layout/recharge_page.xml
+++ b/app/src/main/res/layout/recharge_page.xml
@@ -7,34 +7,41 @@
     android:background="#f4f4f4">
 
 
+    <com.example.myapplication.CommonActionBar
+        android:id="@+id/tv_tv1"
+        android:layout_width="match_parent"
+        android:layout_height="39dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:textColor="#333333"
+        android:gravity="center"
+        app:imageWidth3="9dp"
+        app:imageHeight3="15dp"
+        app:title="评价"
+        app:textContent="aaaaa"
+        app:textSize="16sp"
+        app:back_src="@drawable/back"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_tv1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
             <!-- 在这里添加你的约束布局内容 -->
 
 
-            <com.example.myapplication.CommonActionBar
-                android:id="@+id/tv_tv1"
-                android:layout_width="match_parent"
-                android:layout_height="39dp"
-                android:textColor="#333333"
-                android:gravity="center"
-                app:imageWidth3="9dp"
-                app:imageHeight3="15dp"
-                app:title="评价"
-                app:textContent="aaaaa"
-                app:textSize="16sp"
-                app:back_src="@drawable/back"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
 
 
     <ImageView
@@ -45,7 +52,7 @@
         android:layout_marginLeft="87dp"
         android:layout_marginTop="23dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_tv1" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_tv2"
@@ -58,7 +65,7 @@
         android:textStyle="bold"
         android:layout_marginTop="20dp"
         app:layout_constraintLeft_toRightOf="@id/iv_iv1"
-        app:layout_constraintTop_toBottomOf="@id/tv_tv1" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/tv_tv3"
