--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -8,6 +8,16 @@
     android:layout_gravity="center"
     >
 
+   <ImageView
+       android:id="@+id/image"
+       android:layout_width="wrap_content"
+       android:layout_gravity="center"
+       android:layout_height="wrap_content">
 
+   </ImageView>
+   <Button
+       android:id="@+id/button"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"></Button>
 
 </FrameLayout>
