--- a/app/src/main/res/layout/fourth.xml
+++ b/app/src/main/res/layout/fourth.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_marginRight="6dp"
+    android:layout_marginLeft="6dp"
     android:layout_marginBottom="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/shape_rectangle19"
@@ -25,37 +25,40 @@
             android:textColor="#333333"
             android:textSize="14sp"
             android:textStyle="bold"
-            android:layout_marginLeft="10dp"
             app:layout_constraintTop_toBottomOf="@id/iv_image"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             />
 
 
             <TextView
                 android:id="@+id/name2"
-                android:layout_width="66dp"
+                android:layout_width="wrap_content"
                 android:layout_height="19dp"
                 android:layout_weight="1"
                 android:text="赠新人礼包"
                 android:gravity="center"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="10dp"
                 android:textColor="#ea5858"
                 android:textSize="11sp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:layout_marginLeft="11dp"
                 app:layout_constraintTop_toBottomOf="@id/name"
                 app:layout_constraintLeft_toLeftOf="parent"
                 />
 
             <TextView
                 android:id="@+id/name3"
-                android:layout_width="66dp"
+                android:layout_width="wrap_content"
                 android:layout_height="19dp"
                 android:text="赠美团神券"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="#ea5858"
                 android:textSize="11sp"
-                android:layout_marginLeft="3dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:layout_marginLeft="5dp"
                 app:layout_constraintTop_toBottomOf="@id/name"
                 app:layout_constraintLeft_toRightOf="@id/name2"
                 />
@@ -80,6 +83,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="#ea5858"
                 android:text="10"
+                android:textStyle="bold"
                 android:textSize="18sp"
                 app:layout_constraintTop_toBottomOf="@id/name2"
                 app:layout_constraintLeft_toRightOf="@id/name4"
