--- a/app/src/main/res/layout/activity_fifth.xml
+++ b/app/src/main/res/layout/activity_fifth.xml
@@ -7,7 +7,7 @@
 
 
 
-    <com.example.myapplication.ImageTextLayoutView
+    <com.example.myapplication.recharge.ImageTextLayoutView
         android:id="@+id/tv2_tv"
         android:layout_marginTop="27dp"
         android:layout_width="160dp"
