--- a/app/src/main/res/layout/activity_flip_page.xml
+++ b/app/src/main/res/layout/activity_flip_page.xml
@@ -1,20 +1,38 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fl">
 
     <ImageView
         android:id="@+id/beam"
         android:layout_width="900dp"
         android:layout_height="match_parent"
-        android:layout_gravity="center" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+         />
 
     <ImageView
         android:id="@+id/card"
         android:layout_width="97dp"
         android:layout_height="98dp"
-        android:layout_gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:scaleType="fitCenter" />
+
+    <ImageView
+        android:id="@+id/card3"
+        android:layout_width="39dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="115dp"
+        app:layout_constraintTop_toBottomOf="@id/card"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:scaleType="fitCenter" />
 
 
@@ -22,9 +40,11 @@
         android:id="@+id/bottom"
         android:layout_width="match_parent"
         android:layout_height="190dp"
-        android:layout_gravity="bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:src="@drawable/cheer" />
 
 
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
