--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    android:id="@+id/main_fl_container"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#f4f4f4">
 
-   <ImageView
-       android:id="@+id/image"
-       android:layout_width="wrap_content"
-       android:layout_gravity="center"
-       android:layout_height="wrap_content">
-
-   </ImageView>
-   <Button
-       android:id="@+id/button"
+   <com.example.myapplication.recharge.FlipCardView
        android:layout_width="match_parent"
-       android:layout_height="wrap_content"></Button>
+       android:layout_height="wrap_content"
+       app:cardSrcCopy="@drawable/card2"
+       app:cardSrc="@drawable/card2"
+       tools:ignore="MissingConstraints" />
 
-</FrameLayout>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
