--- a/app/src/main/res/layout/flip_card.xml
+++ b/app/src/main/res/layout/flip_card.xml
@@ -1,51 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="36dp"
+    android:layout_height="151dp"
+
     android:id="@+id/rl">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl4"
+        android:layout_width="match_parent"
+        android:layout_height="151dp"
+        android:background="@drawable/shape_rectangle5"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        >
 
-        <ImageView
-            android:id="@+id/top_image"
-            android:layout_width="16dp"
-            android:layout_height="17dp"
-            android:layout_marginTop="9dp"
-            android:src="@drawable/refresh2"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintTop_toTopOf="parent"
+        <TextView
+            android:id="@+id/cl4_tv7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="赠送翻牌机会 1 次"
+            android:textColor="#333333"
+            android:textSize="14sp"
+            android:gravity="left"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="13dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/bottom_text"
+            app:layout_constraintTop_toTopOf="parent"
             />
 
         <TextView
-            android:id="@+id/bottom_text"
+            android:id="@+id/cl4_tv8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:gravity="center"
-            app:layout_constrainedWidth="true"
-            android:autoSizeMaxTextSize="16sp"
-            android:autoSizeMinTextSize="1sp"
-            android:autoSizeTextType="uniform"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/top_image"
-            app:layout_constraintRight_toLeftOf="@id/top_image2"
-            android:maxLines="1"
-            android:text="查询余额"
+            android:text="累计剩余3次"
+            android:paddingLeft="13dp"
+            android:textColor="#999999"
+            android:textSize="13sp"
+            app:layout_constraintLeft_toRightOf="@id/cl4_tv7"
+            app:layout_constraintBottom_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintTop_toTopOf="@id/cl4_tv7"
             />
 
+        <ImageView
+            android:id="@+id/cl3_im2"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:layout_marginRight="3dp"
+            app:layout_constraintRight_toLeftOf="@id/cl4_tv9"
+            app:layout_constraintBottom_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintTop_toTopOf="@id/cl4_tv7"
+            android:src="@drawable/refresh" />
 
-    <ImageView
-        android:id="@+id/top_image2"
-        android:layout_width="16dp"
-        android:layout_height="14dp"
-        android:layout_marginTop="11dp"
-        app:layout_constraintLeft_toRightOf="@id/bottom_text"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/refresh2"
-        />
+        <TextView
+            android:id="@+id/cl4_tv9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="换一换"
+            android:textColor="#999999"
+            android:layout_marginRight="15dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintTop_toTopOf="@id/cl4_tv7"
+            android:textSize="12sp" />
+
+        <ImageView
+            android:id="@+id/card1_copy"
+            android:layout_width="97dp"
+            android:layout_height="98dp"
+            android:src="@drawable/card1"
+            android:layout_marginTop="8dp"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintRight_toLeftOf="@id/card2"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+
+        <ImageView
+            android:id="@+id/card1"
+            android:layout_width="97dp"
+            android:layout_height="98dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/card1"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/card2"
+            app:layout_constraintTop_toBottomOf="@id/cl4_tv7" />
+
+        <ImageView
+            android:id="@+id/card2"
+            android:layout_width="97dp"
+            android:layout_height="98dp"
+            android:src="@drawable/card2"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintLeft_toRightOf="@id/card1"
+            app:layout_constraintRight_toLeftOf="@id/card3"
+            />
+        <ImageView
+            android:id="@+id/card3"
+            android:layout_width="97dp"
+            android:layout_height="98dp"
+            android:src="@drawable/card3"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintLeft_toRightOf="@id/card2"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+
+        <!--<androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view3"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />-->
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
