--- a/app/src/main/res/layout/recharge_page.xml
+++ b/app/src/main/res/layout/recharge_page.xml
@@ -152,7 +152,7 @@
         app:layout_constraintRight_toLeftOf="@id/tv2_tv"
         android:background="@drawable/shape_rectangle"/>
 
-        <com.example.myapplication.ImageTextLayoutView
+        <com.example.myapplication.recharge.ImageTextLayoutView
             android:id="@+id/tv2_tv"
             android:layout_marginTop="27dp"
             android:layout_width="160dp"
@@ -584,109 +584,17 @@
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl4"
-        android:layout_width="match_parent"
-        android:layout_height="151dp"
-        android:layout_marginTop="13dp"
-        android:background="@drawable/shape_rectangle5"
-        app:layout_constraintTop_toBottomOf="@id/cl3"
-        app:layout_constraintLeft_toLeftOf="parent"
-        >
-
-        <TextView
-            android:id="@+id/cl4_tv7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="赠送翻牌机会 1 次"
-            android:textColor="#333333"
-            android:textSize="14sp"
-            android:gravity="left"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="13dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/cl4_tv8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="累计剩余3次"
-            android:paddingLeft="13dp"
-            android:textColor="#999999"
-            android:textSize="13sp"
-            app:layout_constraintLeft_toRightOf="@id/cl4_tv7"
-            app:layout_constraintBottom_toBottomOf="@id/cl4_tv7"
-            app:layout_constraintTop_toTopOf="@id/cl4_tv7"
-            />
-
-        <ImageView
-            android:id="@+id/cl3_im2"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:layout_marginRight="3dp"
-            app:layout_constraintRight_toLeftOf="@id/cl4_tv9"
-            app:layout_constraintBottom_toBottomOf="@id/cl4_tv7"
-            app:layout_constraintTop_toTopOf="@id/cl4_tv7"
-            android:src="@drawable/refresh" />
-
-        <TextView
-            android:id="@+id/cl4_tv9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="换一换"
-            android:textColor="#999999"
-            android:layout_marginRight="15dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/cl4_tv7"
-            app:layout_constraintTop_toTopOf="@id/cl4_tv7"
-            android:textSize="12sp" />
+            <com.example.myapplication.recharge.FlipCardView
+                android:id="@+id/cl4"
+                android:layout_width="match_parent"
+                android:layout_height="151dp"
+                android:layout_marginTop="13dp"
+                android:background="@drawable/shape_rectangle5"
+                app:layout_constraintTop_toBottomOf="@id/cl3"
+                app:layout_constraintLeft_toLeftOf="parent"
+                tools:ignore="MissingConstraints" />
 
 
-        <ImageView
-            android:id="@+id/im_card1"
-            android:layout_width="97dp"
-            android:layout_height="98dp"
-            android:src="@drawable/card1"
-            android:layout_marginTop="8dp"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:layout_constraintRight_toLeftOf="@id/im_card2"
-            app:layout_constraintLeft_toLeftOf="parent"
-            />
-        <ImageView
-            android:id="@+id/im_card2"
-            android:layout_width="97dp"
-            android:layout_height="98dp"
-            android:src="@drawable/card2"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:layout_constraintLeft_toRightOf="@id/im_card1"
-            app:layout_constraintRight_toLeftOf="@id/im_card3"
-            />
-        <ImageView
-            android:id="@+id/im_card3"
-            android:layout_width="97dp"
-            android:layout_height="98dp"
-            android:src="@drawable/card3"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:layout_constraintLeft_toRightOf="@id/im_card2"
-            app:layout_constraintRight_toRightOf="parent"
-            />
-
-        <!--<androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view3"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:layout_constraintLeft_toLeftOf="parent"
-            />-->
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view4"
                 android:layout_width="match_parent"
