--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <declare-styleable name="FlipCardView">
+        <attr name="cardSrc" format="reference"/>
+        <attr name="cardSrcCopy" format="reference"/>
+        <attr name="cardSrc2" format="reference"/>
+        <attr name="cardSrc3" format="reference"/>
+    </declare-styleable>
+
     <declare-styleable name="TitleBar">
         <attr name="title" format="string" />
         <attr name="back_src" format="reference" />
