--- a/app/src/main/res/layout/first.xml
+++ b/app/src/main/res/layout/first.xml
@@ -1,45 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="85dp"
     android:background="@drawable/shape_rectangle6"
     android:layout_marginRight="10dp"
     android:layout_height="90dp">
 
-    <LinearLayout
-        android:layout_width="85dp"
-        android:layout_height="90dp"
-        android:orientation="vertical"
-        android:gravity="center"
-        >
 
-        <ImageView
-            android:id="@+id/iv_image"
-            android:layout_width="21dp"
-            android:layout_height="24dp"
-            android:src="@drawable/bean"/>
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="充流量"
-            android:layout_marginTop="8dp"
-            android:textColor="#333333"
-            android:textSize="13sp"
 
-            />
+    <ImageView
+        android:id="@+id/iv_image"
+        android:layout_width="21dp"
+        android:layout_height="24dp"
+        app:layout_constraintVertical_chainStyle="spread"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/name"
+        android:src="@drawable/bean"/>
 
-        <TextView
-            android:id="@+id/name2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="流量告急速订购"
-            android:layout_marginTop="5dp"
-            android:textColor="#999999"
-            android:textSize="10sp"
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="充流量"
+        android:layout_marginTop="8dp"
+        android:textColor="#333333"
+        android:textSize="13sp"
+        app:layout_constraintTop_toBottomOf="@id/iv_image"
+        app:layout_constraintBottom_toTopOf="@id/name2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
-            />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/name2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="流量告急速订购"
+        android:layout_marginTop="5dp"
+        android:textColor="#999999"
+        android:textSize="10sp"
+        app:layout_constraintTop_toBottomOf="@id/name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
